feat: add funtionality for ships
